--- a/projects/ngx-primeng-form/src/lib/components/ngx-primeng-form.component.html
+++ b/projects/ngx-primeng-form/src/lib/components/ngx-primeng-form.component.html
@@ -1,5 +1,4 @@
-<form [formGroup]="form" autocomplete="off">
-
+<ng-container [formGroup]="form">
     <div class="row">
 
         <ng-container *ngFor="let obj of items;trackBy:trackByControlName">
@@ -12,10 +11,11 @@
 
                         <!--Textbox-->
                         <ng-container *ngSwitchCase="'text'">
-                            <input class="{{obj.controlStyleClass}}" [formControlName]="obj.controlName" [name]="obj.id"
-                                [id]="obj.id" [placeholder]="obj.placeholder" autocomplete="off"
+                            <input type="{{obj.property.type}}" class="{{obj.controlStyleClass}}"
+                                [formControlName]="obj.controlName" [name]="obj.id" [id]="obj.id"
+                                [placeholder]="obj.placeholder" autocomplete="off"
                                 (onChange)="obj.property.onChange($event)" (onBlur)="obj.property.onBlur($event)"
-                                (onFocus)="obj.property.onFocus($event)" />
+                                (onFocus)="obj.property.onFocus($event)" autocomplete="off" />
                         </ng-container>
 
                         <!--Dropdown-->
@@ -24,7 +24,8 @@
                                 [options]="obj.property.options" [placeholder]="obj.placeholder"
                                 [filter]="obj.property.filter" [autoDisplayFirst]="false" [showClear]="true"
                                 (onChange)="obj.property.onChange($event)" [name]="obj.id" [inputId]="obj.id"
-                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)">
+                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)"
+                                [appendTo]="obj.property.appendTo">
                             </p-dropdown>
                         </ng-container>
 
@@ -33,7 +34,8 @@
                             <p-multiSelect [styleClass]="obj.controlStyleClass" [formControlName]="obj.controlName"
                                 [options]="obj.property.options" [filter]="obj.property.filter"
                                 (onChange)="obj.property.onChange($event)" [name]="obj.id" [inputId]="obj.id"
-                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)">
+                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)"
+                                [appendTo]="obj.property.appendTo">
                             </p-multiSelect>
                         </ng-container>
 
@@ -44,7 +46,8 @@
                                 [defaultDate]="obj.property.defaultDate" [minDate]="obj.property.minDate"
                                 [maxDate]="obj.property.maxDate" [dateFormat]="obj.property.format"
                                 (onSelect)="obj.property.onChange($event)" (onInput)="obj.property.onChange($event)"
-                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)">
+                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)"
+                                [appendTo]="obj.property.appendTo">
                             </p-calendar>
                         </ng-container>
 
@@ -55,13 +58,13 @@
                                 [forceSelection]="obj.property.forceSelection" [suggestions]="obj.property.suggestions"
                                 (completeMethod)="obj.property.onSearch($event)"
                                 (onSelect)="obj.property.onChange($event)" (onBlur)="obj.property.onBlur($event)"
-                                (onFocus)="obj.property.onFocus($event)">
+                                (onFocus)="obj.property.onFocus($event)" [appendTo]="obj.property.appendTo">
                             </p-autoComplete>
                         </ng-container>
 
                         <!--Checkbox-->
                         <ng-container *ngSwitchCase="'checkbox'">
-                            <div class="{{obj.property.containerCSS}}">
+                            <div class="{{obj.property.containerStyleClass}}">
                                 <p-checkbox [styleClass]="obj.controlStyleClass"
                                     [formControl]="form.controls[obj.controlName]" [label]="obj.property.label"
                                     [binary]="true" [name]="obj.id" [inputId]="obj.id"
@@ -71,7 +74,7 @@
 
                         <!--Radio-->
                         <ng-container *ngSwitchCase="'radio'">
-                            <div class="{{obj.property.containerCSS}}">
+                            <div class="{{obj.property.containerStyleClass}}">
                                 <ng-container *ngFor="let radioObj of obj.property.items;let radioIndex=index">
                                     <p-radioButton [styleClass]="obj.controlStyleClass" labelStyleClass="mr-2"
                                         [name]="obj.id" id="{{obj.id}}_{{radioIndex}}" [value]="radioObj.value"
@@ -97,5 +100,4 @@
         </ng-container>
 
     </div>
-
-</form>
+</ng-container>
