added time control

--- a/projects/ngx-primeng-form/src/lib/components/form/ngx-primeng-form.component.html
+++ b/projects/ngx-primeng-form/src/lib/components/form/ngx-primeng-form.component.html
@@ -13,9 +13,9 @@
                         <ng-container *ngSwitchCase="'text'">
                             <input type="{{obj.property.type}}" class="{{obj.controlStyleClass}}"
                                 [formControlName]="obj.controlName" [name]="obj.id" [id]="obj.id"
-                                [placeholder]="obj.placeholder" autocomplete="off"
-                                (onChange)="obj.property.onChange($event)" (onBlur)="obj.property.onBlur($event)"
-                                (onFocus)="obj.property.onFocus($event)" autocomplete="off" />
+                                [placeholder]="obj.placeholder" (onChange)="obj.property.onChange($event)"
+                                (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)"
+                                autocomplete="off" />
                         </ng-container>
 
                         <!--Dropdown-->
@@ -47,8 +47,20 @@
                                 [maxDate]="obj.property.maxDate" [dateFormat]="obj.property.format"
                                 (onSelect)="obj.property.onChange($event)" (onInput)="obj.property.onChange($event)"
                                 (onBlur)="obj.property.onBlur($event)" (onFocus)="obj.property.onFocus($event)"
-                                [appendTo]="obj.property.appendTo">
+                                [appendTo]="obj.property.appendTo" [dataType]="obj.property.type">
                             </p-calendar>
+                        </ng-container>
+
+                        <!--Time Picker-->
+                        <ng-container *ngSwitchCase="'time'">
+                            <input type="text" class="{{obj.controlStyleClass}}" [formControlName]="obj.controlName"
+                                [name]="obj.id" [id]="obj.id" [placeholder]="obj.placeholder"
+                                (onChange)="obj.property.onChange($event)" (onBlur)="obj.property.onBlur($event)"
+                                (onFocus)="obj.property.onFocus($event)" autocomplete="off"
+                                [ngxTimepicker]="materialTimePicker" readonly />
+                            <ngx-material-timepicker #materialTimePicker [minutesGap]="obj.property.gap"
+                                [appendToInput]="obj.property.appendToInput" [format]="obj.property.format">
+                            </ngx-material-timepicker>
                         </ng-container>
 
                         <!--autocomplete-->
