added custom placeholder

--- a/projects/ngx-primeng-form/src/lib/components/form-control-layout/form-control-layout.component.html
+++ b/projects/ngx-primeng-form/src/lib/components/form-control-layout/form-control-layout.component.html
@@ -4,7 +4,7 @@
         <!--For Required field validator-->
         <span class="text-danger label-required" *ngIf="isRequired">*</span>
         <!--For help text-->
-        <span *ngIf="helpText" class="pl-2" pTooltip="{{helpText}}" class="label-help-text"><i
+        <span *ngIf="helpText" class="pl-2 pointer" pTooltip="{{helpText}}" class="label-help-text"><i
                 class="pi pi-info-circle"></i></span>
         <!--For Add option-->
         <span class="float-right" *ngIf="addOptionLabel">
