--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,11 @@
             {{control|json}}
         </ng-template>
 
+        <!--Placeholder-->
+        <ng-template formTemplate="placeholder" let-control="control">
+            {{control|json}}
+        </ng-template>
+
     </ngx-primeng-form>
 
     <button type="button" (click)="submit()">Submit</button>
