--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+body .ui-dropdown.ui-dropdown-clearable .ui-dropdown-label{
+    padding: 0px !important;
+}
